--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,6 +1,10 @@
 $body: #eaeaea;
 
 $mainColor: #2f304b;
-$secondaryColor: #ff684d;
+$mainColor2: #161720;
+$secondaryColor: #ff4d4d;
+$secondaryColor2: #ff4f4f;
+$thirdColor: #b9dcd9;
+$thirdColor2: #c9f5f1;
 
 $myWhite: #f3f3f6;
