--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -4,11 +4,23 @@ $width: 33.3%;
   width: 90%;
   text-align: center;
   display: inline-block;
-  margin-left: 52px;
+  // margin-left: 52px;
   height: auto;
   min-height: 700px;
 
+  &:before {
+    content: '';
+    float: left;
+    width: 10%;
+    min-width: 52px;
+    height: 400px;
+  }
+  
   .main-over-wrapper {
+    display: inline-block;
+    position: relative;
+    width: 85%;
+
     .main-content-wrapper {
       .grid-item-widthx2 {
         width: 66.6%;
@@ -26,6 +38,7 @@ $width: 33.3%;
         }
         
         img {
+          min-height: 200px;
           transition: all 0.3s ease-out;
           // -webkit-filter: grayscale(100%);
           // filter: grayscale(100%);
@@ -37,20 +50,29 @@ $width: 33.3%;
           font-family: 'rame';
           color: $mainColor;
           line-height: 1.58rem;
-          font-size: 1.1rem;
+          font-size: 1.2rem;
           margin-top: -6px;
           font-weight: 300;
-          padding: 20px;
+          padding: 24px;
           letter-spacing: 0.02rem;
-          padding-bottom: 55px;
+          padding-bottom: 65px;
           border-bottom: 1px dotted rgba($mainColor, 0.2);
-
   
           &:after {
             content: ' ●';
             color: rgba($mainColor, 0.5);
             vertical-align: bottom;
-            font-size: 0.8rem;
+            font-size: 0.8em;
+          }
+
+        }
+
+        &:hover {
+          .article-label {
+            &::after {
+              color: $secondaryColor;
+            }
+
           }
         }
   
