--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -30,7 +30,7 @@ $width: 33.3%;
         width: $width;
         overflow: hidden;
         transition: all 0.5s;
-        
+     
         &:hover {
           cursor: pointer;
           img {
@@ -40,29 +40,27 @@ $width: 33.3%;
         img {
           min-height: 200px;
           transition: all 0.3s ease-out;
-          // -webkit-filter: grayscale(100%);
-          // filter: grayscale(100%);
           width: 100%;
         }
         
         .article-label {
           text-align: left;
-          font-family: 'rame';
+          font-family: 'sax';
           color: $mainColor;
-          line-height: 1.58rem;
-          font-size: 1.2rem;
+          line-height: 1.68rem;
+          font-size: 1.25rem;
           margin-top: -6px;
           font-weight: 300;
           padding: 24px;
           letter-spacing: 0.02rem;
           padding-bottom: 65px;
-          border-bottom: 1px dotted rgba($mainColor, 0.2);
+
   
           &:after {
-            content: ' ●';
+            content: '  ⚓️';
             color: rgba($mainColor, 0.5);
             vertical-align: bottom;
-            font-size: 0.8em;
+            font-size: 0.6em;
           }
 
         }
