--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -6,34 +6,27 @@
   color: $secondaryColor !important;
 }
 
-%back2 {
-  $first: rgba($secondaryColor, 0.9);
-  $second: rgba($secondaryColor, 0.5);
-
-  background: $first;
-  background: -moz-linear-gradient(top, $first 0%, $first 16%, $second 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, $first), color-stop(16%, $first), color-stop(100%, $second)) url('/img/noise.png');
-  background: -webkit-linear-gradient(top, $first 0%, $first 16%, $second 100%) url('/img/noise.png');
-  background: -o-linear-gradient(top, $first 0%, $first 16%, $second 100%);
-  background: -ms-linear-gradient(top, $first 0%, $first 16%, $second 100%);
-  background: linear-gradient(to bottom, $first 0%, $first 16%, $second 100%), url('/img/noise.png');
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#dbfffc', GradientType=0 );
+.rotate-icon {
+  transform: rotateZ(-180deg) !important;
 }
 
 #main-bar {
   // vars
-  $background-bar-color: rgba($secondaryColor2, 1);
+  $background-bar-color: rgba($mainColor2, 1);
   $trigger-color: rgba($mainColor, 1);
   $items-colors: $myWhite;
-  $items-colors-over: $mainColor;
+  $items-colors-over: $secondaryColor;
   // ---->
 
-  transition: 0.25s all ease-in-out;
+  -webkit-transition: all .4s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+  -moz-transition: all .4s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+    -o-transition: all .4s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+       transition: all .4s cubic-bezier(0.765, 0.005, 0.365, 1.000); /* custom */
   height: 100%;
   width: 30px;
   position: fixed;
   top: 0px;
-  transform: translateX(-245px);
+  transform: translateX(-363px);
   z-index: 10;
 
   .bar-fix {
@@ -42,7 +35,7 @@
   }
 
   .bar-wrapper {
-    width: 300px;
+    width: 410px;
     height: 100%;
 
 
@@ -52,16 +45,23 @@
       width: 26px;
       height: 60px;
       margin-left: 16px;
-      display: inline-block;
+      float: right;
+      margin-top: 50px;
       opacity: 0;
-      transition: opacity 0.15s ease-in;
-
+      transition: all 0.25s ease-in;
+      
       &:hover {
         cursor: pointer;
+        .icon {
+          color: $secondaryColor;
+        }
       }
       
       .icon {
-        font-size: 1.1rem;
+        transition: all 0.25s ease-in;
+        font-size: 1rem;
+        transform: rotateZ(0deg) translate(3px, 6px);
+        transform-origin: 8px;
       }
       
       .tag-info {
@@ -86,17 +86,19 @@
     }
 
     #bar-menu {
-      width: 170px;
+      width: 360px;
       display: inline-block;
-      padding: 36px;
-      // background-color: $background-bar-color;
+      background-color: $background-bar-color;
       height: 100%;
-      @extend %back2;
+      padding-top: 80px;
 
-      .labels {
-        font-family: 'mySansM';
-        line-height: 8rem;
-        color: $items-colors
+      .labels {    
+        padding-left: 20px;    
+        font-family: 'Josefin Sans';
+        font-size: 1.1rem;
+        font-weight: 300;
+        color: rgba($secondaryColor, 0.7);
+        margin-bottom: 15px;
       }
 
       .item-bar-link {
@@ -106,42 +108,70 @@
       }
 
       .main-bar-list {
-        margin-bottom: 40px;
+        margin-bottom: 35px;
+        padding: 20px;
+        
         .bar-main-item {
-          margin-bottom: 18px;
-  
+          margin-bottom: 1.1rem;
+          
           span {
-            font-family: 'rali';
+            // Averia+Sans+Libre Averia+Serif+Libre Old+Standard+TT
+            text-transform: uppercase;
+            font-family: 'Old Standard TT';
+            -webkit-font-smoothing: antialiased;
+            font-weight: 300;
             text-decoration: none;
-            font-size: 1.8rem;
+            font-size: 2rem;
             color: $items-colors;
             
-            &:visited {
-              color: $items-colors-over;
+            &:hover {
+              color: $thirdColor;
             }
           }
         }
       }
 
       .secondary-bar-list {
-        .bar-secondary-item {
-          display: inline-block;
-  
-          span {
-            line-height: 1.4em;
-            margin-right: 8px;
-            font-family: 'raexbo';
-            text-decoration: none;
-            font-size: 0.9em;
-            color: $items-colors;
-            
-            &:visited {
-              color: $items-colors-over;
+        padding-left: 20px;
+        margin-bottom: 110px;
+
+        li {
+          display: inline-block;  
+          color: $items-colors;       
+          font-family: 'Inknut Antiqua';
+          -webkit-font-smoothing: antialiased;              
+          text-decoration: none;
+          line-height: 1.6rem;
+          margin-right: 8px;
+          font-size: 0.9em;
+
+          &:after {
+            content: ',';
+          }
+
+          &:last-child {
+            &:after {
+              content: '.';
             }
+          }
+
+          &:hover {
+            cursor: pointer;
+            color: $thirdColor2;
           }
         }
       }
+
+      .bar-bottom {
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        .bar-sanchez {
+        }
+      }
     }
+
   }
 }
 
