--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Inknut+Antiqua:300,500,700,800,900|Vollkorn:400,400i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Alegreya+SC:400,500,700|Averia+Libre:300,400,700|Averia+Sans+Libre:400,700|Averia+Serif+Libre:300i,400,700|Old+Standard+TT:400,400i,700');
 
 @font-face {
   font-family: 'Beauty';
@@ -6,13 +8,23 @@
 }
 
 @font-face {
-  font-family: 'MySans';
-  src: url('/fonts/onesans.otf');
+  font-family: 'cons';
+  src: url('/fonts/cons.ttf');
 }
 
 @font-face {
-  font-family: 'MySansM';
-  src: url('/fonts/onesansme.otf');
+  font-family: 'Sax';
+  src: url('/fonts/Sax.otf');
+}
+
+@font-face {
+  font-family: 'Saxi';
+  src: url('/fonts/Saxi.otf');
+}
+
+@font-face {
+  font-family: 'Saxbo';
+  src: url('/fonts/Saxbo.ttf');
 }
 
 @font-face {
