added loader and footer structure

--- a/src/sass/libs/_bar.scss
+++ b/src/sass/libs/_bar.scss
@@ -7,7 +7,7 @@
 }
 
 .rotate-icon {
-  transform: rotateZ(-180deg) !important;
+  transform: rotateY(-180deg) !important;
 }
 
 #main-bar {
@@ -60,8 +60,9 @@
       .icon {
         transition: all 0.25s ease-in;
         font-size: 1rem;
-        transform: rotateZ(0deg) translate(3px, 6px);
+        transform: rotateY(0deg) translate(3px, 6px);
         transform-origin: 8px;
+        backface-visibility: visible;
       }
       
       .tag-info {
