--- a/public/css/main.css
+++ b/public/css/main.css
@@ -170,7 +170,7 @@ svg:focus {
   color: #ff4d4d !important; }
 
 .rotate-icon {
-  transform: rotateZ(-180deg) !important; }
+  transform: rotateY(-180deg) !important; }
 
 #main-bar {
   -webkit-transition: all 0.4s cubic-bezier(0.765, 0.005, 0.365, 1);
@@ -207,8 +207,9 @@ svg:focus {
       #main-bar .bar-wrapper #bar-trigger .icon {
         transition: all 0.25s ease-in;
         font-size: 1rem;
-        transform: rotateZ(0deg) translate(3px, 6px);
-        transform-origin: 8px; }
+        transform: rotateY(0deg) translate(3px, 6px);
+        transform-origin: 8px;
+        backface-visibility: visible; }
       #main-bar .bar-wrapper #bar-trigger .tag-info {
         font-size: 1rem;
         width: 380px;
@@ -277,7 +278,8 @@ svg:focus {
 
 #intro {
   width: 100%;
-  background-color: red; }
+  min-height: 480px;
+  z-index: 20; }
 
 #main_title {
   position: absolute;
@@ -470,21 +472,36 @@ svg:focus {
     margin-bottom: 40px !important;
     margin-top: 100px !important; }
   .phrase-links-container {
-    font-size: 3rem !important; } }
+    font-size: 2.5rem !important; } }
 
 @media all and (min-width: 460px) {
   .phrase-container .phrase-wrapper {
     margin-top: 50px; } }
 
+#main-loader {
+  width: 0%;
+  height: 0%;
+  z-index: 10;
+  position: fixed;
+  overflow: hidden; }
+  #main-loader .loader-wrapper {
+    position: absolute;
+    left: 50%;
+    top: 50%; }
+    #main-loader .loader-wrapper .loader-icon {
+      width: 50px;
+      height: 50px;
+      background-color: red;
+      transform: translate(-50%, -50%); }
+
+.loader-visible {
+  background-color: #f3f3f6;
+  width: 100% !important;
+  height: 100% !important; }
+
 body {
-  background: white;
-  background: -moz-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, white), color-stop(16%, white), color-stop(100%, rgba(170, 170, 170, 0.1))) url("/img/noise.png");
-  background: -webkit-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%) url("/img/noise.png");
-  background: -o-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%);
-  background: -ms-linear-gradient(top, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%);
-  background: linear-gradient(to bottom, white 0%, white 16%, rgba(170, 170, 170, 0.1) 100%), url("/img/noise.png");
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#dbfffc', GradientType=0 ); }
+  background-image: linear-gradient(180deg, #f3f3f6 40.63%, #eeeeee 40.63%, #eeeeee 43.75%, #f1f1f1 43.75%, #f1f1f1 46.88%, #f0faf9 46.88%, #f0faf9 50%, #f3f3f6 50%, #f3f3f6 90.63%, #eeeeee 90.63%, #eeeeee 93.75%, #f1f1f1 93.75%, #f1f1f1 96.88%, #f0faf9 96.88%, #f0faf9 100%);
+  background-size: 32.00px 32.00px; }
 
 body {
   font-family: 'Fira Sans';
@@ -515,3 +532,7 @@ a {
 
 .main-bar-open-bar {
   transform: translateX(0px) !important; }
+
+.noOverflow {
+  overflow: hidden;
+  height: 0; }
