--- a/src/sass/libs/_bioPhrase.scss
+++ b/src/sass/libs/_bioPhrase.scss
@@ -12,6 +12,7 @@
   margin-bottom: 190px;
   
   .phrase-wrapper {
+    // transform: translateY(-600px);
     width: 100%;
     text-align: center;
     display: inline-block;
@@ -131,7 +132,7 @@
     }
   }
   .phrase-links-container {
-    font-size: 3rem !important;
+    font-size: 2.5rem !important;
   }
 }
 
