--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,19 +10,12 @@
 @import "libs/intro";
 @import "libs/articles";
 @import "libs/bioPhrase";
+@import "libs/footer";
+@import "libs/loader";
 
 %back1 {
-  $first: rgba(#ffffff, 1);
-  $second: rgba(#aaaaaa, 0.1);
-
-  background: $first;
-  background: -moz-linear-gradient(top, $first 0%, $first 16%, $second 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, $first), color-stop(16%, $first), color-stop(100%, $second)) url('/img/noise.png');
-  background: -webkit-linear-gradient(top, $first 0%, $first 16%, $second 100%) url('/img/noise.png');
-  background: -o-linear-gradient(top, $first 0%, $first 16%, $second 100%);
-  background: -ms-linear-gradient(top, $first 0%, $first 16%, $second 100%);
-  background: linear-gradient(to bottom, $first 0%, $first 16%, $second 100%), url('/img/noise.png');
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#dbfffc', GradientType=0 );
+  background-image: linear-gradient(180deg, #f3f3f6 40.63%, #eeeeee 40.63%, #eeeeee 43.75%, #f1f1f1 43.75%, #f1f1f1 46.88%, #f0faf9 46.88%, #f0faf9 50%, #f3f3f6 50%, #f3f3f6 90.63%, #eeeeee 90.63%, #eeeeee 93.75%, #f1f1f1 93.75%, #f1f1f1 96.88%, #f0faf9 96.88%, #f0faf9 100%);
+  background-size: 32.00px 32.00px;
 }
 
 body {
@@ -62,4 +55,9 @@ a {
 .main-bar-open-bar {
   transform: translateX(0px) !important;
   // left: 300px !important;
+}
+
+.noOverflow {
+  overflow: hidden;
+  height: 0;
 }
