--- a/public/css/main.css
+++ b/public/css/main.css
@@ -324,13 +324,13 @@ svg:focus {
       transition: all 0.5s; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover {
         cursor: pointer; }
-      #main-content .main-over-wrapper .main-content-wrapper .grid-item img {
+      #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content img {
         min-height: 200px;
         transition: all 0.3s ease-out;
         width: 100%; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-label {
         text-align: left;
-        font-family: 'sax';
+        font-family: 'rame';
         color: #2f304b;
         line-height: 1.68rem;
         font-size: 1.25rem;
@@ -483,7 +483,9 @@ svg:focus {
   height: 0%;
   z-index: 10;
   position: fixed;
-  overflow: hidden; }
+  overflow: hidden;
+  background-image: linear-gradient(180deg, #f3f3f6 40%, #ebebeb 40%, #ebebeb 43.33%, #f1f1f1 43.33%, #f1f1f1 50%, #f3f3f6 50%, #f3f3f6 90%, #ebebeb 90%, #ebebeb 93.33%, #f1f1f1 93.33%, #f1f1f1 100%);
+  background-size: 30.00px 30.00px; }
   #main-loader .loader-wrapper {
     position: absolute;
     left: 50%;
@@ -491,7 +493,6 @@ svg:focus {
     #main-loader .loader-wrapper .loader-icon {
       width: 50px;
       height: 50px;
-      background-color: red;
       transform: translate(-50%, -50%); }
 
 .loader-visible {
@@ -500,8 +501,9 @@ svg:focus {
   height: 100% !important; }
 
 body {
-  background-image: linear-gradient(180deg, #f3f3f6 40.63%, #eeeeee 40.63%, #eeeeee 43.75%, #f1f1f1 43.75%, #f1f1f1 46.88%, #f0faf9 46.88%, #f0faf9 50%, #f3f3f6 50%, #f3f3f6 90.63%, #eeeeee 90.63%, #eeeeee 93.75%, #f1f1f1 93.75%, #f1f1f1 96.88%, #f0faf9 96.88%, #f0faf9 100%);
-  background-size: 32.00px 32.00px; }
+  background-image: linear-gradient(180deg, #f3f3f6 40%, #ebebeb 40%, #ebebeb 43.33%, #f1f1f1 43.33%, #f1f1f1 50%, #f3f3f6 50%, #f3f3f6 90%, #ebebeb 90%, #ebebeb 93.33%, #f1f1f1 93.33%, #f1f1f1 100%);
+  background-size: 30.00px 30.00px;
+  background-attachment: fixed; }
 
 body {
   font-family: 'Fira Sans';
