--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -48,10 +48,10 @@ $width: 33.3%;
         
         .article-label {
           text-align: left;
-          font-family: 'rame';
+          font-family: 'sax';
           color: $mainColor;
           line-height: 1.68rem;
-          font-size: 1.25rem;
+          font-size: 1.2rem;
           margin-top: -6px;
           font-weight: 300;
           padding: 24px;
